# xhelpers

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  sx_cast.h  sx_findfile.h  sx_jsonstring.h  sx_path.h  sx_string.h  sx_system.h  sx_timestamp.h
prj.core/: sx_jsonstring.h  sx_str.h  sx_tfstr.h  sx_timestamp.h
prj.core/xhelpers/: castex.h  sx_cast.h  sx_findfile.h  sx_path.h  sx_srm.h  sx_str.h  sx_string.h  sx_tfstr.h  sx_timer.h  sx_types.h
prj.test/: info.txt
test/: CMakeLists.txt  xhelpers_test.cpp
xhelpers/: CMakeLists.txt  sx_findfile.h  sx_jsonstring.h  sx_path.h  sx_srm.h  sx_str.h  sx_string.h  sx_system.h  sx_timer.h  sx_timestamp.h
xhelpers/portability/: CMakeLists.txt
xhelpers/src/: sx_system.cpp
